# gitgauge

./: .all-contributorsrc  .gitignore  .gitmessage  CONTRIBUTING.md  LICENSE  README.md  git-helper.sh  git-hooks.sh  git-setup.sh  package-lock.json  package.json  vite.config.js
.githooks/: prepare-commit-msg
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  ci.md  conf.md  docs.md  feature.md  hotfix.md
.github/workflows/: publish.yml
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: branches.rs  contributor.rs  github_url_verifier.rs  lib.rs  main.rs  repositories.rs  url_verifier.rs
src-tauri/src/model/: author.rs  graph.rs  mod.rs  repo.rs
src-tauri/src/response/: branch.rs  contributor.rs  mod.rs
src/components/: button-primary-medium.svelte  button-tinted-medium.svelte
src/components/overview-page/: banner.svelte  user-menu.svelte
src/data/: dummyData.ts
src/lib/: githubUrlVerifier.js  github_url_verifier.js  metrics.ts  repo.ts
src/lib/components/global/: ButtonPrimaryMedium.svelte  ButtonTintedMedium.svelte  Calendar.svelte  ContributorCard.svelte  ContributorStatsCard.svelte  DropdownTintedMedium.svelte  ErrorMessage.svelte  RepoBookmarkList.svelte  (+11 more)
src/lib/stores/: bookmarks.ts  dropdown.ts  repo.ts  sidebar.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/dashboard/: +page.svelte
src/routes/landing page/: +page.svelte
src/routes/overview-page/: +layout.svelte  +page.svelte  layout.svelte
src/routes/tempLanding/: +page.svelte
src/routes/tmp2/: +page.svelte
static/: global.css
(+13 files in other folders)
