[package]
name = "gitgauge"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gitgauge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
openssl-sys = { version = "0.9", features = ["vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1.0.219"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
chrono = { version = "0.4.41", features = ["serde"] }
tauri-plugin-log = "2"
log = "0.4"

git2 = { version = "0.18" }
md5 = "0.8"
url = { version = "2", features = ["serde"] }
regex = { version = "1", features = ["unicode"] }
